--- a/home.html
+++ b/home.html
@@ -1,10 +1,50 @@
+
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+    <head>
+        <title>Search</title>
+        <link rel="stylesheet" href="style.css">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
+    </head>
+    <body>
+    <div class="main">
+        <div class="links">
+            <a href="image.html" id="link1">Images</a>
+            <a href="advanced.html" id="link2">Advanced</a>
 
-</body>
+        </div>
+        <div class="img" >
+        <div class="img1" >
+            <img src="google.png" id="google" >
+        </div>
+        </div>
+        <div class="searchform" >
+            <div class="box">
+            <form action="https://google.com/search" >
+            <input type="text" name="q" id="sbox">
+            <div class="icon">
+                <div><img src="search.png"> </div>
+            </div>
+             <div class="btns">
+            <input type="submit" value="Google Search" id="btn1">
+            <input type="submit" value="I'm Feeling Lucky" id="btn2">
+            </div>
+            </form>
+           </div>
+        </div>
+
+        </div>
+     </div>
+    <div id="lang">
+        Google offered in:  <a href="https://www.google.com/setprefs?sig=0_T265kt7-zljOT6Ss3gZPLWAHpJI%3D&amp;hl=ru&amp;source=homepage&amp;sa=X&amp;ved=0ahUKEwiWkNSgqL_wAhVlhf0HHbC-DsoQ2ZgBCA4">russian</a>
+        <a href="https://www.google.com/setprefs?sig=0_T265kt7-zljOT6Ss3gZPLWAHpJI%3D&amp;hl=et&amp;source=homepage&amp;sa=X&amp;ved=0ahUKEwiWkNSgqL_wAhVlhf0HHbC-DsoQ2ZgBCA8">eesti</a>
+    </div>
+    <div class="footer" style=" background: #f2f2f2">
+     <div class="row">
+         <p class="cntr">Estonia</p>
+     </div>
+
+    </div>
+
+    </body>
 </html>
