--- a/home.html
+++ b/home.html
@@ -27,7 +27,7 @@
             </div>
              <div class="btns">
             <input type="submit" value="Google Search" id="btn1">
-            <input type="submit" value="I'm Feeling Lucky" id="btn2">
+            <input type="submit" name="btnI" value="I'm Feeling Lucky" id="btn2">
             </div>
             </form>
            </div>
