--- a/advanced.html
+++ b/advanced.html
@@ -3,8 +3,64 @@
 <head>
     <meta charset="UTF-8">
     <title>Advanced Search</title>
+    <link rel="stylesheet" href="style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
 </head>
-<body>
+<body class="adv" style="min-height: 100%; position: relative">
+ <div>
+     <header class="header" style="background-color: rgba(255,255,255,1)">
+           <div >
+            <a href="home.html" id="link3" style="padding-top: 10px;margin-left: 95%;">Search</a>
+        </div>
+         <div class ='row1'>
+
+             <div class="img2" >
+                 <img src="google.png" style="height: 25px;padding-left:18px;">
+             </div>
+         </div>
+     </header>
+     <div class="appbar">
+         <label style="margin-left: 10px; ">
+             <span style="vertical-align: inherit; border-bottom: #555555;">Advanced Search</span>
+         </label>
+
+     </div>
+     <div class="table" style="padding-top: 20px;">
+
+             <span id="name" >Find Pages with...</span>
+             <span id="name2" >To do this in the search box.</span>
+
+     </div>
+     <form action="https://google.com/search" name="f">
+       <div class="field">
+         <label for="field1" class="description">all these words:</label>
+         <input type="text" class="textbar" id="field1" value="" name="as_q">
+         <label for="field1" class="description1">Type the important words: tri-colour rat terrier</label>
+       </div>
+       <div class="field">
+         <label for="field1" class="description" >this exact word or phrase:</label>
+         <input type="text" class="textbar" id="field1" value="" name="as_epq" style="margin-left: 36px;">
+         <label for="field1" class="description1">Put exact words in quotes: "rat terrier"</label>
+       </div>
+       <div class="field">
+         <label for="field1" class="description">any of these words:</label>
+         <input type="text" class="textbar" id="field1" value="" name="as_oq" style="margin-left: 71px;">
+         <label for="field1" class="description1">Type OR between all the words you want: miniature OR standard</label>
+       </div>
+        <div class="field">
+         <label for="field1" class="description">none of these words:</label>
+         <input type="text" class="textbar" id="field1" value="" name="as_nhi"  style="margin-left: 63px;">
+         <label for="field1" class="description1">Put a minus sign just before words that you don't want: -rodent, -"Jack Russell"</label>
+
+       </div>
+       <div>
+
+         <input class="btn btn-primary" type="submit" value="Advanced Search" id="btn3">
+
+       </div>
+     </form>
+
+ </div>
 
 </body>
 </html>
