--- a/advanced.html
+++ b/advanced.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Google Advanced Search</title>
     <link rel="stylesheet" href="style.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
+
 </head>
 <body class="adv" style="min-height: 100%; position: relative">
  <div>
@@ -55,7 +55,7 @@
        </div>
        <div>
 
-         <input class="btn btn-primary" type="submit" value="Advanced Search" id="btn3">
+         <input  type="submit" value="Advanced Search" id="btn3">
 
        </div>
      </form>
